// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bold mark 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "bold",
          },
        ],
        "object": "text",
        "text": "this is bold",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`code is not greedy about newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "one sentence",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "const hello = 'world';
function() {
  return hello;
}",
      },
    ],
    "object": "block",
    "type": "code",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "two sentence",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`code mark 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "code",
          },
        ],
        "object": "text",
        "text": "const foo = 123;",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`code mark with escaped characters 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "code",
          },
        ],
        "object": "text",
        "text": "<script>alert('foo')</script>",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`deleted mark 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "deleted",
          },
        ],
        "object": "text",
        "text": "this is strikethrough",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`does not add extra paragraphs around lists 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "first paragraph",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "list",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "second paragraph",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`does not escape characters inside of code blocks 1`] = `
"\`\`\`
const hello = 'world';
function() {
  return hello;
}
\`\`\`"
`;

exports[`does not escape characters inside of code marks 1`] = `"\`<script>alert('foo')</script>\`"`;

exports[`does not parse marks around code block boundaries 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This is *not",
      },
    ],
    "object": "block",
    "type": "code",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "hello * bold",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`does not parse marks inside of code blocks 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This is *not* bold, how about __this__",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`handles escaped blocks 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "# text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`handles escaped blocks 2`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "- text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`handles escaped blocks 3`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "* text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`handles escaped marks 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "this is **not bold**",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`handles escaped marks 2`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "this is *not italic*",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`handles escaped marks 3`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "this is [not](a link)",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`handles escaped marks 4`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "this is ![not](an image)",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`headings are not greedy about newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "a paragraph",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "Heading",
      },
    ],
    "object": "block",
    "type": "heading2",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "another paragraph",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`horizontal rule does not make text above a heading 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "not a heading",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "horizontal-rule",
  },
]
`;

exports[`horizontal rule does not make text above a heading 2`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "not a heading",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "===",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`ignores empty link 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "empty",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`inserted mark 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "inserted",
          },
        ],
        "object": "text",
        "text": "inserted text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`italic mark 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "italic",
          },
        ],
        "object": "text",
        "text": "this is italic",
      },
      Object {
        "marks": Array [],
        "object": "text",
        "text": " ",
      },
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "italic",
          },
        ],
        "object": "text",
        "text": "this is italic too",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`maintains multiple empty paragraphs 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This is the first sentence",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "Two empty paragraphs above",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses \`\`\` code fences 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "const hello = 'world';
function() {
  return hello;
}",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`parses \`\`\` code fences with language 1`] = `
Array [
  Object {
    "data": Object {
      "language": "javascript",
    },
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "const hello = 'world';
function() {
  return hello;
}",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`parses ~~~ code fences 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "const hello = 'world';
function() {
  return hello;
}",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`parses double nested todo list items 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "checked": true,
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "checked",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "checked": false,
                },
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "empty",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
              Object {
                "data": Object {
                  "checked": true,
                },
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "checked",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
            ],
            "object": "block",
            "type": "todo-list",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "todo-list",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "checked": false,
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "three",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "todo-list",
  },
]
`;

exports[`parses empty string 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses hashtag 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "this is a ",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "#hashtag",
          },
        ],
        "object": "inline",
        "type": "hashtag",
      },
      Object {
        "marks": Array [],
        "object": "text",
        "text": " example",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses hashtag ignoring dash 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "dash should end ",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "#hashtag",
          },
        ],
        "object": "inline",
        "type": "hashtag",
      },
      Object {
        "marks": Array [],
        "object": "text",
        "text": "-dash",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses heading1 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "Heading",
      },
    ],
    "object": "block",
    "type": "heading1",
  },
]
`;

exports[`parses heading2 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "Heading",
      },
    ],
    "object": "block",
    "type": "heading2",
  },
]
`;

exports[`parses heading3 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "Heading",
      },
    ],
    "object": "block",
    "type": "heading3",
  },
]
`;

exports[`parses heading4 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "Heading",
      },
    ],
    "object": "block",
    "type": "heading4",
  },
]
`;

exports[`parses heading5 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "Heading",
      },
    ],
    "object": "block",
    "type": "heading5",
  },
]
`;

exports[`parses heading6 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "Heading",
      },
    ],
    "object": "block",
    "type": "heading6",
  },
]
`;

exports[`parses horizontal rule 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "horizontal-rule",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "a paragraph",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses image 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "alt": "example",
          "src": "http://example.com/logo.png",
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "",
          },
        ],
        "object": "block",
        "type": "image",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses indented code blocks 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "const hello = 'world';
function() {
  return hello;
}",
      },
    ],
    "object": "block",
    "type": "code",
  },
]
`;

exports[`parses indented list items 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "one",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "two",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
]
`;

exports[`parses link 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "href": "http://google.com",
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "google",
          },
        ],
        "object": "inline",
        "type": "link",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses link with encoded characters 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "href": "https://example.com/app/kibana#/discover?_g=(refreshInterval:('$$hashKey':'object:1596',display:'10 seconds',pause:!f,section:1,value:10000),time:(from:now-15m,mode:quick,to:now))&_a=(columns:!(metadata.step,message,metadata.attempt_f,metadata.tries_f,metadata.error_class,metadata.url),index:'logs-',interval:auto,query:(query_string:(analyze_wildcard:!t,query:'metadata.at: Stepper*')),sort:!(time,desc))",
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "kibana",
          },
        ],
        "object": "inline",
        "type": "link",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses link with percent symbol 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "href": "https://example.com/app/kibana#/visualize/edit/Requests-%25",
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "kibana",
          },
        ],
        "object": "inline",
        "type": "link",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses link within mark 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "href": "http://google.com",
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "google",
          },
        ],
        "object": "inline",
        "type": "link",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses list items 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "one",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "two",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
]
`;

exports[`parses list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "one ",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "bold",
              },
            ],
            "object": "text",
            "text": "bold",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "italic",
              },
            ],
            "object": "text",
            "text": "italic",
          },
          Object {
            "marks": Array [],
            "object": "text",
            "text": " two",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
]
`;

exports[`parses mixed list items 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "list",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "another",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "different",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`parses nested list items 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "one",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "two",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "nested",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
            ],
            "object": "block",
            "type": "bulleted-list",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "bulleted-list",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "next para",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses nested todo list items 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "checked": false,
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "todo",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {
                  "checked": false,
                },
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "nested",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
              Object {
                "data": Object {
                  "checked": false,
                },
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "deep",
                  },
                ],
                "object": "block",
                "type": "list-item",
              },
            ],
            "object": "block",
            "type": "todo-list",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "todo-list",
  },
]
`;

exports[`parses ordered list items 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "one",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "two",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`parses ordered list items with different numbers 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "one",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "two",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "three",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`parses ordered list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "one ",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "bold",
              },
            ],
            "object": "text",
            "text": "bold",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "italic",
              },
            ],
            "object": "text",
            "text": "italic",
          },
          Object {
            "marks": Array [],
            "object": "text",
            "text": " two",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
]
`;

exports[`parses paragraph 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This is just a sentence",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses paragraph with Markdown characters 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This ",
      },
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "bold",
          },
        ],
        "object": "text",
        "text": "is",
      },
      Object {
        "marks": Array [],
        "object": "text",
        "text": " a sen-ten-ce",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses quote 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "this is a quote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
]
`;

exports[`parses quote followed by list with quote (outline/#723) 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "this is a quote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "data": Object {},
                "nodes": Array [
                  Object {
                    "marks": Array [],
                    "object": "text",
                    "text": "this is a list item with a quote",
                  },
                ],
                "object": "block",
                "type": "paragraph",
              },
            ],
            "object": "block",
            "type": "block-quote",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "ordered-list",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "this is a quote with a list item",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "this is the second list item",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "ordered-list",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
]
`;

exports[`parses quote with newlines and marks 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "this is a ",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "italic",
              },
            ],
            "object": "text",
            "text": "quote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "this is the second part of the quote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "this is the third part of the quote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
]
`;

exports[`parses tables 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Tables",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Are",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Cool",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "col 1 is",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "left-aligned",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "$1600",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "col 2 is",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "centered",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "$12",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "col 3 is",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "right-aligned",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "$1",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
    ],
    "object": "block",
    "type": "table",
  },
]
`;

exports[`parses todo list items 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "checked": false,
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "todo",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {
          "checked": true,
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "done",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "todo-list",
  },
]
`;

exports[`parses todo list items with marks 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {
          "checked": true,
        },
        "nodes": Array [
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "deleted",
              },
            ],
            "object": "text",
            "text": "done",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
      Object {
        "data": Object {
          "checked": true,
        },
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "more ",
          },
          Object {
            "marks": Array [
              Object {
                "data": Object {},
                "object": "mark",
                "type": "bold",
              },
            ],
            "object": "text",
            "text": "done",
          },
        ],
        "object": "block",
        "type": "list-item",
      },
    ],
    "object": "block",
    "type": "todo-list",
  },
]
`;

exports[`parses two paragraphs 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This is the first sentence",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This is the second sentence",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses two paragraphs 2`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This is the first sentence",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "This is the second sentence",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`parses whitespace string 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`quote is not greedy about newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "this is a quote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "this is a paragraph",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`quotes do not get combined 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "this is a quote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "marks": Array [],
            "object": "text",
            "text": "this is a different quote",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "block",
    "type": "block-quote",
  },
]
`;

exports[`tables are not greedy about newlines 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Tables",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Are",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "Cool",
              },
            ],
            "object": "block",
            "type": "table-head",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {
              "align": null,
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "col 1 is",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "center",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "left-aligned",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
          Object {
            "data": Object {
              "align": "right",
            },
            "nodes": Array [
              Object {
                "marks": Array [],
                "object": "text",
                "text": "$1600",
              },
            ],
            "object": "block",
            "type": "table-cell",
          },
        ],
        "object": "block",
        "type": "table-row",
      },
    ],
    "object": "block",
    "type": "table",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [],
        "object": "text",
        "text": "a new paragraph",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;

exports[`underlined mark 1`] = `
Array [
  Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "marks": Array [
          Object {
            "data": Object {},
            "object": "mark",
            "type": "underlined",
          },
        ],
        "object": "text",
        "text": "underlined text",
      },
    ],
    "object": "block",
    "type": "paragraph",
  },
]
`;
